# maine-geography

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: index.html  mainegeo.html  search.js
docs/mainegeo/: elections.html  elections_classes.html  entities.html  functions.html  helpers.html  lookups.html  matching.html  patterns.html  townships.html  unspecified_groups.html
src/mainegeo/: __init__.py  build.py  build_hooks.py  connections.py  elections.py  elections_classes.py  entities.py  helpers.py  lookups.py  matching.py  matching_detailed.py  paths.py  patterns.py  test.py  townships.py
src/mainegeo/data/: counties.csv  counties.json  overrides.yaml  townships.csv  townships.json  townships.yaml
src/mainegeo/functions/: __init__.py  functions.py
src/mainegeo/townships/: __init__.py  townships.py  townships2.py
tests/: test_townships.py  test_unspecified_groups.py
tests/data/: election_towns_sample.csv
