[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mainegeo"
version = "0.0.1"
authors = [
  { name="Lydia-Rose Kesich", email="lkesich@mainevotes.net" }
]
description = "Package for parsing and standardizing Maine place names in public data"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "utils @ git+https://github.com/lkesich/utilities.git",
    "pandas >= 2.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/lkesich/maine-geography"
Documentation = "https://lkesich.github.io/maine-geography/"
Issues = "https://github.com/lkesich/maine-geography/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mainegeo"]

[tool.hatch.build.targets.wheel.sources]
"mainegeo/data" = "mainegeo/data"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.tox.env.typecheck]
deps = ["mypy>=1.0.0"]
commands = ["mypy src/mainegeo"]